--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ license = "MIT"
 repository = "https://github.com/egmaleta/bruce"
 
 [tool.poetry.dependencies]
-python = "3.11.8"
+python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.2.0"
+black = "24.2.0"
 
 [tool.black]
 line-length = 88
