--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/egmaleta/bruce"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+dill = "0.3.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.2.0"
